--- a/style.scss
+++ b/style.scss
@@ -18,8 +18,8 @@ html {
 }
 
 body {
-	background: $white;
-  font: 18px/1.4 $helvetica;
+	background: $black;
+  font: 18px/1.4 $TimesNewRoman;
   color: $darkGray;
 }
 
@@ -194,7 +194,7 @@ img {
   margin: 0;
   color: $darkGray;
   cursor: pointer;
-  font-family: $helveticaNeue;
+  font-family: $TimesNewRoman;
   font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
