--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -20,8 +20,8 @@ $white: #fff;
   src:  url('C:\Users\Safa Amirbayat\Downloads\FinalFantasy-aa4m.woff') format('woff'),
         ;
 }
-$TimesNewRoman: MyWebFont, Arial, sans-serif;
-$TimesNewRoman: MyWebFont, Helvetica, Arial, sans-serif;
+$TimesNewRoman: MyWebFont, TimesNewRoman, sans-serif;
+$TimesNewRoman: MyWebFont, TimesNewRoman, Arial, sans-serif;
 $georgia: Georgia, serif;
 
 // Mobile breakpoints
