--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -21,7 +21,7 @@ $white: #fff;
         ;
 }
 $TimesNewRoman: MyWebFont, TimesNewRoman, sans-serif;
-$TimesNewRoman: MyWebFont, TimesNewRoman, Arial, sans-serif;
+$TimesNewRoman: MyWebFont, TimesNewRoman, sans-serif;
 $georgia: Georgia, serif;
 
 // Mobile breakpoints
