--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
 	background: $black;
-  font: 18px/1.4 TimesNewRoman;
+  font: 18px/1.4 $TimesNewRoman;
   color: $darkGray;
 }
 
